# tracer

./: .gitignore  CMakeLists.txt  README  aabb_bvh.h  box.h  camera.h  circle_sampler.h  color.h  hittable.h  hittable_list.cpp  hittable_list.h  interval.cpp  interval.h  linear_sampler.h  main.cpp  obj.h  ray.h  rtweekend.h  run.sh  sampler.h  sphere.cpp  sphere.h  thread_pool.h  tri.h  unit_sampler.h  vec3.h
include/: aabb_bvh.h  box.h  camera.h  circle_sampler.h  color.h  hittable.h  hittable_list.h  interval.h  linear_sampler.h  obj.h  ray.h  rtweekend.h  sampler.h  sphere.h  tri.h  unit_sampler.h
include/utils/: arena.hpp  thread_pool.hpp
src/: hittable_list.cpp  interval.cpp  main.cpp  sphere.cpp
src/utils/: thread_pool.cpp
